--- a/app/globals.css
+++ b/app/globals.css
@@ -85,7 +85,7 @@ h1.mt {
 }
 
 h2 {
-    @apply scroll-m-20 border-b pb-2 text-3xl font-semibold tracking-tight first:mt-0
+    @apply scroll-m-20 pb-2 text-3xl font-semibold tracking-tight first:mt-0
 }
 
 h2.mt {
@@ -114,6 +114,10 @@ p {
 
 p.mt {
     @apply mt-6
+}
+
+.mt {
+    @apply mt-14
 }
 
 blockquote {
